Refactoring retryable logic